--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>CoffeeRoasters</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -12,7 +12,25 @@
 </head>
 <body>
 
+  <div class="site-header-hero-wrapper">
+    <!-- SITE-HEADER -->
+    <header class="site-header">
+      <div class="site-header-container container">
+        <a class="site-header-logo-link" href="index.html">
+          <img class="site-header-logo-img" src="img/logo.svg" alt="CoffeeRoasters logo" width="235" height="24">
+        </a>
 
+        <!-- SITENAV -->
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
