Add hero section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         </nav>
       </div>
     </header>
+
+
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero-container container">
+        <div class="hero-info-wrapper">
+          <h1 class="hero-heading">Good coffee is made simply.</h1>
+          <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+          <a class="button button-green" href="#">Create your plan</a>
+        </div>
+
+        <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee and cake on the table" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+      </div>
+    </div>
   </div>
 
   <script src="js/main.js"></script>
