--- a/index.html
+++ b/index.html
@@ -46,6 +46,51 @@
     </div>
   </div>
 
+
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+
+    <!-- INDEX-COLLECTION -->
+    <section class="index-collection">
+      <div class="container">
+        <div class="index-collection-inner">
+          <h2 class="index-colleciton-heading">Our collection</h2>
+          <ul class="index-collection-list">
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/danche.png" alt="Danche" width="450" height="375" srcset="img/danche.png 1x, img/danche@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Danche</h3>
+                <p class="index-collection-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/gran-espresso.png" alt="Gran Espresso" width="450" height="375" srcset="img/gran-espresso.png 1x, img/gran-espresso@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Gran Espresso</h3>
+                <p class="index-collection-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/piccollo.png" alt="Piccollo" width="450" height="375" srcset="img/piccollo.png 1x, img/piccollo@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Piccollo</h3>
+                <p class="index-collection-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+              </div>
+            </li>
+            <li class="index-collection-item">
+              <img class="index-collection-img" src="img/planalto.png" alt="Planalto" width="450" height="375" srcset="img/planalto.png 1x, img/planalto@2x.png 2x">
+              <div class="index-collection-info">
+                <h3 class="index-collection-title">Planalto</h3>
+                <p class="index-collection-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
   <script src="js/main.js"></script>
 </body>
 </html>
