Add index-features section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,34 @@
       </div>
     </section>
 
+
+    <!-- INDEX-FEATURES -->
+    <section class="index-features">
+      <div class="container">
+        <div class="index-features-inner">
+          <h2 class="index-features-heading">Why choose us?</h2>
+          <p class="index-features-lead">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+          <ul class="index-features-list">
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-quality.jpg" alt="Coffee factory worker smelling coffee beans" width="433" height="500" srcset="img/feature-quality.jpg 1x, img/feature-quality@2x.jpg 2x">
+              <h3 class="index-features-item-heading">Best quality</h3>
+              <p class="index-features-item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+            </li>
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-exclusive.jpg" alt="Coffee being filtered into a glass pot" width="433" height="500" srcset="img/feature-exclusive.jpg 1x, img/feature-exclusive@2x.jpg 2x">
+              <h3 class="index-features-item-heading">Exclusive benefits</h3>
+              <p class="index-features-item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </li>
+            <li class="index-features-item">
+              <img class="index-features-img" src="img/feature-free-shipping.jpg" alt="Coffee shop worker giving coffee to customer" width="433" height="500" srcset="img/feature-free-shipping.jpg 1x, img/feature-free-shipping@2x.jpg 2x">
+              <h3 class="index-features-item-heading">Free shipping</h3>
+              <p class="index-features-item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script src="js/main.js"></script>
