Add decorative images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
           <a class="button button-green" href="#">Create your plan</a>
         </div>
 
-        <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee and cake on the table" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+        <div class="hero-img-wrapper">
+          <img class="hero-badge" src="img/hero-badge.png" alt="" width="160" height="160" srcset="img/hero-badge.png 1x, img/hero-badge@2x.png 2x">
+          <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Person's hand with iced coffee and cake on the table" width="710" height="696" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+        </div>
       </div>
     </div>
   </div>
@@ -85,6 +88,10 @@
               </div>
             </li>
           </ul>
+
+          <img class="index-colleciton-leaves-left" src="img/leaves-left.svg" alt="" width="371" height="371">
+          <img class="index-colleciton-leaves-right" src="img/leaves-right-mix.svg" alt="" width="546" height="592">
+          <img class="index-colleciton-leaves-left-light" src="img/leaves-left-light.svg" alt="" width="314" height="287">
         </div>
       </div>
     </section>
@@ -144,6 +151,8 @@
             </li>
           </ol>
           <a class="how-it-works-cta button button-brown" href="#">Create your plan</a>
+
+          <img class="how-it-works-sticker" src="img/coffee-first-sticker.png" alt="" width="227" height="192" srcset="img/coffee-first-sticker.png 1x, img/coffee-first-sticker@2x.png 2x">
         </div>
       </div>
     </section>
